--- a/netlify.toml
+++ b/netlify.toml
@@ -2,8 +2,5 @@
   command = "npm run build"
   functions = ".netlify/functions/"
 
-[context.production.environment]
-  WHO_AM_I = "World"
-
-[context.deploy-preview.environment]
-  WHO_AM_I = "Developer"
+[context.deploy-preview]
+  command = "npm run build:staging"
